Deprecated `G_REGEX_JAVASCRIPT_COMPAT` in GLib 2.74.0
GLib 2.74.0 deprecated G_REGEX_JAVASCRIPT_COMPAT
, which if being used as the only GRegexCompileFlags
produces a Critical: (phosh:3162): GLib-CRITICAL **: 14:27:39.456: g_regex_new: assertion '(compile_options & ~G_REGEX_COMPILE_MASK) == 0' failed
. Docs seem to not be updated yet, but in the code it states
* @G_REGEX_JAVASCRIPT_COMPAT: Changes behaviour so that it is compatible with
* JavaScript rather than PCRE. Since GLib 2.74 this is no longer supported,
* as libpcre2 does not support it. Since: 2.34 Deprecated: 2.74
I guess that should be a not-so-hard fix, but I'm short of time now, so leaving it here so it gets a chance of being fixed faster.