util: Don't use G_REGEX_JAVASCRIPT_COMPAT

G_REGEX_JAVASCRIPT_COMPAT is unsupported as of glib 2.74 and
not needed for the regex at hand.

G_REGEX_DEFAULT is the preferable default but not available before
glib 2.73.2, so there's a fallback to 0 for earlier versions.

Closes: https://gitlab.gnome.org/World/Phosh/phosh/-/issues/840
Part-of: <https://gitlab.gnome.org/World/Phosh/phosh/-/merge_requests/1148>